--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,13 +1,22 @@
 :root {
   --main-color: rgb(69,248,130);
 }
-
+.current{
+    color: var(--main-color)!important;
+    & hr{
+        opacity: 1;
+        transform: rotate(50deg);
+    }
+}
 header nav{
     display: flex;
     border-radius: 20px;
     padding: 3vw 2vw;
     justify-content: space-between;
     align-items: center;
+    & ul{
+        display: none;
+    }
     & .rightmenu{
         display: flex;
         & .rightmenugrup{
@@ -25,6 +34,29 @@ header nav{
         }
     }
 }
+.rightnav{
+    height: 100%;
+    position: fixed;
+    width: 80%;
+    padding: 3vw 2vw;
+    right: -100%;
+    top: 0;
+    transition: 250ms right;
+    background: rgb(15,22,27);
+    & .logo-and-exit{
+        align-items: center;
+        display: flex;
+        justify-content: space-around;
+        & .exit i.fa-xmark{
+            font-size: 30px;
+            cursor: pointer;
+            color: var(--main-color);
+        }
+    }
+}
+.navactive{
+    right: 0;
+}
 @media (min-width: 768px){
     header nav div.rightmenu div.rightmenugrup{
         display: flex !important;
@@ -34,6 +66,7 @@ header nav{
             align-items: center;
             justify-content: center;
             & i.fa-magnifying-glass{
+                cursor: pointer;
                 color: white;
                 font-size: 20px;
                 transition: 500ms color;
@@ -64,7 +97,7 @@ header nav{
                 & a svg{
                     color: var(--main-color);
                     height: 100%;
-                    width: 120px;
+                    width: 180px;
                     fill: none;
                     transition: 250ms fill;
                 }
@@ -86,5 +119,45 @@ header nav{
         height: 4px;
         border-radius: 40px;
         width: 100%;
+    }
+    .burger{
+        cursor: pointer;
+    }
+}
+@media (min-width:1280px){
+    .fa-bars{
+        display: none !important;
+    }
+    header nav ul{
+        display: flex;
+        gap: 20px;
+        list-style-type: none;
+        & li{
+            color: white;
+            font-weight: bold;
+            padding: 10px;
+            cursor: pointer;
+            transition: 250ms all;
+            position: relative;
+            &:hover{
+                color: var(--main-color);
+                & hr{
+                    opacity: 1;
+                    transform: rotate(50deg);
+                }
+
+            }
+            & hr{
+                transition: 550ms all;
+                position: absolute;
+                height: 100%;
+                top: 0;
+                transform: rotate(90deg);
+                opacity: 0;
+                left: 50%;
+                border-color: var(--main-color);
+
+            }
+        }
     }
 }
