--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -14,7 +14,7 @@ header nav{
     padding: 3vw 2vw;
     justify-content: space-between;
     align-items: center;
-    ul{
+    ul.main-menu{
         display: none;
     }
     .rightmenu{
@@ -45,47 +45,81 @@ header nav{
     flex-direction: column;
     transition: 250ms right;
     background: rgb(15,22,27);
-    table,tr,th{
-        border:solid gray;
-        border-width: 1px 0px 1px 0;
-    }
-    table{
+    .social-links{
+        display: flex;
+        justify-content: space-around;
         width: 100%;
-        tr{
-            text-align: left;
-            color: white;
-            th{
-                width: 100%;
-                padding: 10px 20px;
-                label{
-                    transition: 250ms all;
-                    justify-content: space-between;
-                    display: flex;
-                }
-                &:has(> input:checked){
-                    & label::after{
-                        color: black;
-                        background-color: var(--main-color);
-                        content: "-";
-
-                    }
-                }
-                & label::after{
-                    transition: 250ms all;
-                    text-align: right;
-                    content: "+";
-                    cursor: pointer;
-                    background-color: rgb(24,33,40);
-                    padding: 0 10px;
-                    border-radius: 5px;
-                }
-                input{
-                    display: none;
-                }
-                
-            }
+        
+        svg{
+            border: 1px solid rgba(128, 128, 128, 0.363);
+            width: 40px;
+            height: 40px;
             
+            padding: 8px;
+            transition: fill 0.5s,background-color 0.5s;
+            border-radius: 8px;
+            fill: white;
+            &:hover{
+                background-color: var(--main-color);
+                fill: black;
+            }
+        }
+    }
 
+    ul.mobilenav{
+        display: flex;
+        flex-direction: column;
+
+        list-style-type: none;
+        hr{
+            opacity: 0.2;
+            border-width: 0.2px 0 0 0;
+        }
+        li{
+            &:has(label input:checked) ul{
+                display: block;
+                li{
+                    padding: 10px 40px;
+                }
+            }
+            &:not(:has(label)){
+                padding: 10px 40px;
+            }
+            ul{
+                display: none;
+                list-style-type: none;
+            }
+            color: white;
+            font-weight: 600;
+            label{
+                padding: 5px 20px;
+                align-items: center;
+                display: flex;
+                justify-content: space-between;
+                input{
+                    appearance: none;
+                }
+            }
+            label input::after{
+                display: flex;
+                cursor: pointer;
+                justify-content: center;
+                align-items: center;
+                color: white;
+                height: 40px;
+                transition: 250ms all;
+                width: 40px;
+                font-size: 20px;
+                background-color: rgb(24,32,41);
+                border-radius: 8px;
+                content: "+";
+            }
+            label input:checked::after{
+                content: "‒";
+                font-weight: 900;
+                background: var(--main-color);
+            }
+            }
         }
     }
     .rightnavcontainer{
@@ -132,7 +166,6 @@ header nav{
         }
     }
 
-}
 .navactive{
     right: 0;
 }
@@ -164,7 +197,6 @@ header nav{
                 height: 50px;
                 &:hover{
                     & a svg{
-                        transition: 750ms all;
                         fill:var(--main-color);
                     }
                     & a span{
@@ -176,9 +208,10 @@ header nav{
                 a svg{
                     color: var(--main-color);
                     height: 100%;
+                    fill: transparent;
                     width: 180px;
-                    fill: none;
-                    transition: 250ms fill;
+                    transition-duration: 250ms;
+                    transition-property: fill;
                 }
                 a span{
                     font-size: 18px;
@@ -213,7 +246,7 @@ header nav{
     body div.cursor{
         display: block;
     }
-    header nav ul{
+    header nav ul.main-menu{
         display: flex;
         gap: 20px;
         list-style-type: none;
@@ -224,7 +257,47 @@ header nav{
             cursor: pointer;
             transition: 250ms all;
             position: relative;
+            z-index: 0;
+            background: #000;
+/*             ul{
+                z-index: -2;
+                position: absolute;
+                height: 0;
+                overflow: hidden;
+
+                top:90%;
+                background-color: rgb(24,33,40);
+                li{
+                    width: 10rem;
+                    text-transform: uppercase;
+                }
+            } */
+            span.sub-mainmenu{
+                z-index: -2;
+                display: block;
+                padding: 20px 0;
+                opacity:1;
+                height: 0;
+                ul{
+                    list-style-type: none;
+                    border-radius: 8px;
+                    border: 1px solid rgba(128, 128, 128, 0.568);
+                    opacity: 0;
+                }
+            }
             &:hover{
+                span.sub-mainmenu{
+                    padding: 20px 0;
+                    ul{
+                        transition: 1s top;
+                        opacity: 1;
+                        top: 100%;
+                        visibility: visible;
+                        height: auto;
+                        
+                    }
+                }
+
                 color: var(--main-color);
                 hr{
                     opacity: 1;
@@ -245,5 +318,4 @@ header nav{
         }
     }
 }
-
 
