--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -2,45 +2,84 @@
 :root {
     --main-color: rgb(69,248,130);
   }
-
+@keyframes showhidden {
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    100%{
+        opacity: 0;
+    }
+}
 main{
     width: 100vw;
     height: 100%;
     .container{
+        position: relative;
         width: 100vw;
         height: 100%;
         display:flex;
-        flex-direction: column;
-        gap: 20px;
-        justify-content: center;
+        flex-direction: row;
+        justify-content: space-around;
         align-items: center;
-        h1,h2{
-            color: white;
+        flex-wrap: wrap;
+
+        img.quarter{
+            position: absolute;
+            z-index: -1;
+            animation: 2s linear infinite showhidden;
         }
-        .live{
-            color: var(--main-color);
-            text-transform: uppercase;
-            font-size: 1rem;
-            letter-spacing: 3px;
-            font-weight: bolder;
-            padding: 15px;
-            border-radius: 10px;
-            background: linear-gradient(to right, rgba(69, 248, 129, 0.582),transparent);
+        .texts{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            text-align: left;
+            h1,h2{
+                color: white;
+            }
+            .live{
+                color: var(--main-color);
+                text-transform: uppercase;
+                font-size: 1rem;
+                width: max-content;
+                letter-spacing: 3px;
+                font-weight: 900;
+                padding: 15px;
+                border-radius: 10px;
+                background: linear-gradient(to right, rgba(69, 248, 129, 0.582),transparent);
+            }
+            h1{
+                font-size: clamp(2rem,17vw,8rem);
+                text-transform: uppercase;
+                font-weight: bolder;
+                text-shadow: 2px 7px 0px rgb(41, 148, 76);
+                font-family: 'Berlin Sans FB Demi', sans-serif;
+            }
+            h2{
+                width: 100%;
+                text-align: center;
+                font-size: clamp(1rem,7vw,5rem);
+                text-transform: uppercase;
+                font-weight: bolder;
+                letter-spacing: 5px;
+            }
         }
-        h1{
-            font-size: 17vw;
-            text-transform: uppercase;
-            font-weight: bolder;
-            text-shadow: 2px 7px 0px rgb(41, 148, 76);
-            font-family: 'Berlin Sans FB Demi', sans-serif;;
+        
+        .image{
+            overflow: hidden;
+            padding: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: auto;
         }
-        h2{
-            width: 100%;
-            text-align: center;
-            font-size: 6vw;
-            text-transform: uppercase;
-            font-weight: bolder;
-            letter-spacing: 5px;
-        }
+    }
+}
+@media (min-width:1280px) {
+    main .container .texts {
+        align-items: left !important;
     }
 }
