--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,6 +1,7 @@
 :root {
   --main-color: rgb(69,248,130);
 }
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .current{
     color: var(--main-color)!important;
     hr{
@@ -300,11 +301,17 @@ header nav{
     h1{
         color: white;
         text-transform: uppercase;
+        text-shadow: -3px 3px 0 rgba(50, 185, 95, 0.685);
         font-size: 3rem;
+        letter-spacing: 2px;
+        font-weight: 900;
         margin-bottom: 2rem;
+        font-family: "'Barlow', sans-serif";
     }
     h1::before,h1::after{
+        text-shadow: 0px 0px 0px transparent;
         content: "...";
+        letter-spacing: 0;
         color: var(--main-color);
     }
     .searchbar{
