--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3,9 +3,7 @@
 @import "home.css";
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body{
-    background: url('https://themedox.com/demo/mykd/assets/img/slider/slider_bg.jpg') no-repeat scroll;
-    background-size: cover;
-    background-position: center center;
+    position: relative;
     overflow-x:hidden;
     display: flex;
     flex-direction: column;
@@ -28,7 +26,7 @@ body::-webkit-scrollbar-thumb {
     height: 10px;
     width: 10px;
     position: fixed;
-    z-index: 0;
+    z-index: 1;
     display: none;
     border-radius: 50%;
     background:rgb(69,248,130);
