--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,7 +1,9 @@
 @import "reset.css";
 @import "header.css";
 @import "home.css";
+@import "loading.css";
 @import "nft-item.css";
+@import "about_area.css";
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body{
     position: relative;
@@ -12,6 +14,7 @@ body{
     justify-content: center;
     align-items: center;
 }
+
 
 body::-webkit-scrollbar {
     width: 5px;
@@ -26,7 +29,7 @@ body::-webkit-scrollbar-thumb {
 .cursor{
     height: 10px;
     width: 10px;
-    position: absolute;
+    position: fixed;
     z-index: 1;
     top: 50%;
     left: 50%;
