--- a/assets/styles/nft-item.css
+++ b/assets/styles/nft-item.css
@@ -1,5 +1,6 @@
 section.nft-item__area{
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     padding: 20px;
     background: #0B0E13;
@@ -12,7 +13,7 @@ section.nft-item__area{
         gap: 10px;
         border-radius: 15px;
         background-image: linear-gradient(90deg, #0c0e12 0%, rgba(31, 41, 53, 0.36078) 100%);
-        padding: 25px;
+        padding: clamp(10px,1vw,25px);
         img{
             border-radius: 15px;
         }
